Jython NEWS

For more details, please see https://hg.python.org/jython

Jython 2.7.1rc1
  Bugs fixed
    - [ 2511 ] Percent operator calls __getattr__('__getitem__')
    - [ PR28 ] zipimporter supports multi-byte characters in pathnames
    - [ 2228 ] Re-use "makeCompiledFilename" function where possible
    - [ 608632 ] __doc__foo should accept java String
    - [ 2523 ] defaultdict.__getitem__() does not propagate exceptions raised by calling
               default_factory
    - [ 2522 ] defaultdict.__getitem__(unhashable) raises KeyError instead of TypeError
    - [ 2515 ] typing module doesn't import
    - [ 2538 ] Test failures in test_unittest
    - [ 2293 ] "java.lang.IllegalArgumentException: java.lang.IllegalArgumentException:
               Cannot create PyString with non-byte value" triggered after adding
               unicode element with non-ASCII character to sys.path
    - [ 2535 ] Building jython standalone manually results in local filesystem paths
               showing up in Jython stacktraces
    - [ 2533 ] Opcode.java is outdated -> breaks PyBytecode.interpret
    - [ 2502 ] Missing OpenFlags enum entry makes Jython clash with JRuby dependency
    - [ 2446 ] Support SNI for SSL/TLS client sockets
    - [ 2455 ] Java classes in packages with __init__.py not found
    - [ 2481 ] Update urllib2.py from 2.7.11
    - [ 2514 ] Jython Class.__subclasses__() does not match Python output
               (not in load order)
    - [ 2413 ] ElementTree.write doesn't close files if used with invalid encoding
    - [ 2443 ] java.util.Map derived classes lack iterkeys, itervalues methods
    - [ 2516 ] _get_open_ssl_key_manager tries to validate that the private and
               public keys match, and is throwing an SSLError:
               "key values mismatch" when provided with multiple certs (Root/CA/Cert)
    - [ 2314 ] Failures in test_shutil on Windows
    - [ 2488 ] Subprocess should always join corresponding coupler threads